TIARA-74: Initial commit - added routing for quiz subpage and main page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,13 +15,13 @@
   margin: 0 16px;
 }
 
-.toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 16px;
-}
 
-.toolbar #twitter-logo:hover {
-  opacity: 0.8;
+.toolbar a,
+.toolbar a:visited,
+.toolbar a:hover {
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
 }
 
 .content {
