--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,12 +1,10 @@
+
 <div class="Quiz" role="main">
   <p>
     Rozwiąż Quiz i odkryj swoje możliwości!
   </p>
-  <button (click)="startQuiz()">
-    Rozpocznij Quiz
-  </button>
+  <input type="button" [routerLink]="'quiz'" value="Rozpocznij Quiz" />
 </div>
-
 <div class="description" role="contentinfo">
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin lorem sed augue commodo auctor. Duis condimentum non odio dapibus maximus. Ut iaculis, odio vel porta euismod, dui turpis posuere dui, vel convallis metus massa non tellus. Duis tincidunt posuere mi non finibus. Pellentesque bibendum orci ut ligula vestibulum, sed porta felis aliquet. Nunc dignissim dapibus felis a iaculis. Maecenas nisi risus, venenatis vel placerat sed, elementum non odio. Suspendisse nec aliquam felis, eu ultrices lorem. Etiam a egestas quam. Nullam et convallis metus, gravida interdum magna. Phasellus elementum, elit ut interdum interdum, justo mi vehicula sem, ac semper tortor risus a est. Cras eget dolor vitae neque vehicula aliquet. Ut malesuada, lacus vitae tincidunt cursus, ante diam varius augue, sit amet tristique enim nisi id nunc.
@@ -18,4 +16,5 @@
     Sed lacinia ac justo non pretium. Fusce metus lorem, ultrices sed gravida sit amet, cursus in odio. Donec aliquet lacinia quam et accumsan. Nunc feugiat suscipit est. Suspendisse pulvinar egestas lacus at elementum. Vestibulum tincidunt, libero eu porttitor ultricies, quam tortor mattis nisi, et blandit magna turpis vitae leo. Cras ac enim vel quam iaculis sodales quis sed mauris.
   </p>
 </div>
+
 
