--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,20 +1,23 @@
+<div class="main">
+  <div class="slogan">
+    <h1>
+      Rozwiąż Quiz i odkryj swoje możliwości!
+    </h1>
+  </div>
+  <div class="quizButton">
+    <input type="button" class="button" [routerLink]="'quiz'" value="Rozpocznij Quiz" />
+  </div>
 
-<div class="Quiz" role="main">
-  <p>
-    Rozwiąż Quiz i odkryj swoje możliwości!
-  </p>
-  <input type="button" [routerLink]="'quiz'" value="Rozpocznij Quiz" />
+  <div class="content">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin lorem sed augue commodo auctor. Duis condimentum non odio dapibus maximus. Ut iaculis, odio vel porta euismod, dui turpis posuere dui, vel convallis metus massa non tellus. Duis tincidunt posuere mi non finibus. Pellentesque bibendum orci ut ligula vestibulum, sed porta felis aliquet. Nunc dignissim dapibus felis a iaculis. Maecenas nisi risus, venenatis vel placerat sed, elementum non odio. Suspendisse nec aliquam felis, eu ultrices lorem. Etiam a egestas quam. Nullam et convallis metus, gravida interdum magna. Phasellus elementum, elit ut interdum interdum, justo mi vehicula sem, ac semper tortor risus a est. Cras eget dolor vitae neque vehicula aliquet. Ut malesuada, lacus vitae tincidunt cursus, ante diam varius augue, sit amet tristique enim nisi id nunc.
+    </p>
+    <p>
+      Aliquam finibus, lectus ut ornare facilisis, urna risus accumsan ex, sed euismod tortor sapien consectetur est. Curabitur molestie, est non sollicitudin placerat, neque eros consectetur ipsum, nec scelerisque lectus quam vel orci. Sed ultrices lacus velit. Nullam molestie mi augue, in congue lectus gravida a. Suspendisse potenti. Duis nec imperdiet turpis, id venenatis purus. Proin vitae commodo tortor.
+    </p>
+    <p>
+      Sed lacinia ac justo non pretium. Fusce metus lorem, ultrices sed gravida sit amet, cursus in odio. Donec aliquet lacinia quam et accumsan. Nunc feugiat suscipit est. Suspendisse pulvinar egestas lacus at elementum. Vestibulum tincidunt, libero eu porttitor ultricies, quam tortor mattis nisi, et blandit magna turpis vitae leo. Cras ac enim vel quam iaculis sodales quis sed mauris.
+    </p>
+  </div>
 </div>
-<div class="description" role="contentinfo">
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin lorem sed augue commodo auctor. Duis condimentum non odio dapibus maximus. Ut iaculis, odio vel porta euismod, dui turpis posuere dui, vel convallis metus massa non tellus. Duis tincidunt posuere mi non finibus. Pellentesque bibendum orci ut ligula vestibulum, sed porta felis aliquet. Nunc dignissim dapibus felis a iaculis. Maecenas nisi risus, venenatis vel placerat sed, elementum non odio. Suspendisse nec aliquam felis, eu ultrices lorem. Etiam a egestas quam. Nullam et convallis metus, gravida interdum magna. Phasellus elementum, elit ut interdum interdum, justo mi vehicula sem, ac semper tortor risus a est. Cras eget dolor vitae neque vehicula aliquet. Ut malesuada, lacus vitae tincidunt cursus, ante diam varius augue, sit amet tristique enim nisi id nunc.
-  </p>
-  <p>
-    Aliquam finibus, lectus ut ornare facilisis, urna risus accumsan ex, sed euismod tortor sapien consectetur est. Curabitur molestie, est non sollicitudin placerat, neque eros consectetur ipsum, nec scelerisque lectus quam vel orci. Sed ultrices lacus velit. Nullam molestie mi augue, in congue lectus gravida a. Suspendisse potenti. Duis nec imperdiet turpis, id venenatis purus. Proin vitae commodo tortor.
-  </p>
-  <p>
-    Sed lacinia ac justo non pretium. Fusce metus lorem, ultrices sed gravida sit amet, cursus in odio. Donec aliquet lacinia quam et accumsan. Nunc feugiat suscipit est. Suspendisse pulvinar egestas lacus at elementum. Vestibulum tincidunt, libero eu porttitor ultricies, quam tortor mattis nisi, et blandit magna turpis vitae leo. Cras ac enim vel quam iaculis sodales quis sed mauris.
-  </p>
-</div>
-
 
