TIARA-74: Initial commit - added routing for quiz subpage and main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,5 @@
 </div>
 
 <div class="content" *ngIf="router.isActive('/quiz', false)">
-  <app-quiz></app-quiz>
+  <app-quiz-details></app-quiz-details>
+</div>
