Test rozdzialu metody

--- a/src/app/components/quiz-details/quizDetails.component.html
+++ b/src/app/components/quiz-details/quizDetails.component.html
@@ -15,3 +15,5 @@
     <input type="button" value="{{ answer.text }}" (click)="saveAnswer($event)">
   </div>
 </div>
+
+<input type="button" value="Nastepne pytanie" (click)="sendAnswers()">
