TIARA-74: Zapytania POST WiP

--- a/src/app/components/quiz-details/quizDetails.component.html
+++ b/src/app/components/quiz-details/quizDetails.component.html
@@ -12,7 +12,7 @@
 
 <div *ngIf="quiz">
   <div *ngFor = "let answer of quiz.questionList[0].answers">
-    <input type="button" value="{{ answer.text }}" (click)="saveAnswer($event)">
+    <input type="button" value="{{ answer.text }}" (click)="saveAnswer(answer)">
   </div>
 </div>
 
