--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,7 +1,3 @@
-root {
-  box-sizing: border-box;
-}
-
 .main {
   display: grid;
   column-gap: 20px;
@@ -24,7 +20,7 @@ root {
 }
 
 .button {
-  background-color: #1976d2;
+  background-color: var(--deepblue);
   border: none;
   color: white;
   padding: 15% 15%;
@@ -40,7 +36,8 @@ root {
 }
 
 .button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24),0 8px 8px 0 rgba(0,0,0,0.19);
+  background-color: #446ce3;
 }
 
 .content {
