TIARA-62: Poprawa wizualii

--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -20,7 +20,7 @@
 }
 
 .button {
-  background-color: var(--deepblue);
+  background-color: cornflowerblue;
   border: none;
   color: white;
   padding: 15% 15%;
