--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,8 +8,8 @@
   height: 4rem;
   display: flex;
   align-items: center;
-  background-color: var(--deepblue);
-  color: white;
+  background-color: rgb(255, 255, 255,.8);
+  color: black;
   font-weight: 600;
 }
 
@@ -17,6 +17,11 @@
   margin: 0 16px;
   float: left;
 }
+
+h1 {
+  color: black;
+}
+
 
 .toolbar a,
 .toolbar a:visited,
@@ -28,22 +33,28 @@
 .content {
   display: flex;
   margin: 82px auto 32px;
-  padding: 0 16px;
+  padding: 2%;
   max-width: 960px;
+  min-width: 70%;
+  min-height: 30em;
   flex-direction: column;
   align-items: center;
+
+  background: rgba(255,255,255,.5);
+
+  box-shadow: 10px 10px rgba(0,0,0,.15);
 }
 
 a,
 a:visited,
 a:hover {
-  color: white;
+  color:  rgba(0,0,0,.7);
   text-decoration: none;
 }
 
 main {
   font-family: Lato, sans-serif;
-  min-height: auto;
+  margin: 1% 3% 3% 3%;
 
   display:flex;
   flex-direction:column;
@@ -61,10 +72,8 @@ footer {
 }
 
 footer div {
-  background: var(--deepblue);
   width: 100%;
   padding-bottom: 1%;
-  color: #fff;
   text-align:center;
 }
 
@@ -75,19 +84,28 @@ svg {
 .wave {
   animation: wave 10s linear;
   animation-iteration-count:infinite;
-  fill: var(--deepblue);
+  fill: white;
 }
 
 #wave2 {
   animation-duration:5s;
   animation-direction: reverse;
-  opacity: .6
+  opacity: .3;
 }
 #wave3 {
   animation-duration: 7s;
-  opacity:.3;
+  opacity:.15;
+}
+#wave1 {
+  opacity:.5;
 }
 
 @keyframes wave {
   to {transform: translateX(-100%);}
 }
+
+/*
+TODO: media-querry
+TODO: background
+TODO: comments
+*/
