--- a/src/app/components/quiz-details/quizDetails.component.css
+++ b/src/app/components/quiz-details/quizDetails.component.css
@@ -11,7 +11,7 @@
   text-align: center;
   min-width: 80%;
   color: white;
-  background: var(--deepblue);
+  background: cornflowerblue;
   box-shadow: 10px 10px rgba(0,0,0,.15);
 }
 
@@ -27,9 +27,10 @@
 
 .answer input {
   min-width: 30%;
-  background-color: var(--deepblue);
+  background-color: cornflowerblue;
   border: none;
   color: white;
+  font-weight: bolder;
   text-decoration: none;
   margin: 1%;
   padding: 1%;
