TIARA-62: Minor changes for proffessions view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <a routerLink="/">
-    <img alt="Angular Logo" src="favicon.ico" ng-href="#" />
+    <img alt="Logo" src="favicon.ico" ng-href="#" />
   </a>
   <a routerLink="/">
     <h1>Tiara Przydziału</h1>
