--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,13 +2,14 @@
 
 .toolbar {
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   right: 0;
   height: 4rem;
   display: flex;
   align-items: center;
-  background-color: rgb(255, 255, 255,.8);
+  background-color: rgba(255, 255, 255,.8);
   color: black;
   font-weight: 600;
 }
@@ -43,6 +44,11 @@ h1 {
   background: rgba(255,255,255,.5);
 
   box-shadow: 10px 10px rgba(0,0,0,.15);
+}
+
+.content > *{
+  width: 100%;
+  height: 100%;
 }
 
 a,
