--- a/src/app/components/quiz-details/quizDetails.component.html
+++ b/src/app/components/quiz-details/quizDetails.component.html
@@ -1,9 +1,9 @@
 <div class="content" *ngIf="results.length === 0">
-  <div class="question" *ngIf="quiz">
+  <div class="question" *ngIf="quiz && quiz.questionList.length > 0">
     {{quiz.questionList[0].text | json}}
   </div>
 
-  <div  class="answers" *ngIf="quiz && quiz.questionList[0].multipleChoice">
+  <div  class="answers" *ngIf="quiz && quiz.questionList.length > 0 && quiz.questionList[0].multipleChoice">
     <div class="answerCheckbox"  *ngFor = "let answer of quiz.questionList[0].answers">
       <label>
         <input type="checkbox" (change)="editCheckboxed($event, answer)"> <span> {{ answer.text }} </span>
@@ -11,7 +11,7 @@
     </div>
     <input id="nextQuestion" type="button" value="Następne pytanie &raquo;"  (click)="saveManyAnswers()">
   </div>
-  <div  class="answers" *ngIf="quiz && !quiz.questionList[0].multipleChoice">
+  <div  class="answers" *ngIf="quiz && quiz.questionList.length > 0 && !quiz.questionList[0].multipleChoice">
     <div class="answer"  *ngFor = "let answer of quiz.questionList[0].answers">
       <input class="answerButton" type="button" value="{{ answer.text }}" (click)="saveOneAnswer(answer)">
     </div>
@@ -21,7 +21,7 @@
   <div class="results">
     <p> Twoje grupy elementarne: </p>
     <p class="result" *ngFor = "let result of results">
-      {{result}}
+      {{result.name}}
     </p>
   </div>
 </div>
