--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700");
 
+h1{
+  line-height: .8;
+}
+
+
 .toolbar {
   position: fixed;
   z-index: 999;
   top: 0;
   left: 0;
   right: 0;
-  height: 4rem;
+  min-height: 4rem;
   display: flex;
   align-items: center;
   background-color: rgba(255, 255, 255,.8);
@@ -16,19 +21,34 @@
 
 .toolbar img {
   margin: 0 16px;
-  float: left;
 }
 
 h1 {
   color: black;
 }
 
-
-.toolbar a,
-.toolbar a:visited,
-.toolbar a:hover {
-  color: white;
+a, a:visited, a:hover {
+  color: black;
   text-decoration: none;
+}
+
+#placeholder {
+  flex-grow: 1;
+}
+
+.search {
+  padding: 1%;
+}
+
+.register {
+  padding: 1%;
+  margin: 1%;
+  background: lightgoldenrodyellow;
+}
+
+.login {
+  padding: 1%;
+  background: lightgreen;
 }
 
 .content {
@@ -49,13 +69,6 @@ h1 {
 .content > *{
   width: 100%;
   height: 100%;
-}
-
-a,
-a:visited,
-a:hover {
-  color:  rgba(0,0,0,.7);
-  text-decoration: none;
 }
 
 main {
