--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,34 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-  <a routerLink="/">
+  <a routerLink="/" routerLinkActive="active">
     <img alt="Logo" src="favicon.ico" ng-href="#" />
   </a>
   <a routerLink="/">
     <h1>Tiara Przydziału</h1>
   </a>
+  <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
+  <div id="placeholder"> </div>
+  <a class="search" routerLink="/search">
+    <h4>Wyszukiwarka zawodów</h4>
+  </a>
+  <a href="/register" class="register" *ngIf="!isLoggedIn" routerLink="register">Zarejestruj się</a>
+  <a href="/login" class="login" routerLink="login" *ngIf="!isLoggedIn">Zaloguj się</a>
+
+  <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
+    <li class="nav-item">
+      <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
+    </li>
+    <li class="nav-item">
+      <a href class="nav-link" (click)="logout()">LogOut</a>
+    </li>
+  </ul>
 </div>
 
+
 <!-- Content -->
-<main>
-  <div class="content" *ngIf="router.isActive('/', true)">
-    <app-main></app-main>
-  </div>
-  <div class="content" *ngIf="router.isActive('/quiz', false)">
-    <app-quiz-details></app-quiz-details>
-  </div>
+<main class="content">
+    <router-outlet></router-outlet>
 </main>
 
 
