--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,10 +1,17 @@
+:host {
+  width: 100%;
+}
+
 .main {
+  width: 100%;
+  height: 100%;
+  padding: 4%;
   display: grid;
   column-gap: 20px;
   row-gap: 0;
   grid-template-areas:
-    "slogan slogan . button ."
-    "content content content content content";
+    "slogan . button ."
+    "content content content content ";
 }
 
 .slogan {
@@ -41,10 +48,10 @@
 }
 
 .content {
+  margin-top: 3%;
   display: flex;
-  max-width: 960px;
+  /*max-width: 960px;*/
   flex-direction: column;
-  align-items: center;
 
   grid-area: content;
 }
