--- a/src/app/components/quiz-details/quizDetails.component.css
+++ b/src/app/components/quiz-details/quizDetails.component.css
@@ -5,6 +5,11 @@
   align-items: center;
 }
 
+#quiz, .results {
+  width: 100%;
+  height: 100%;
+}
+
 .question {
   margin: 2%;
   padding: 2%;
@@ -103,6 +108,15 @@
   box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24),0 8px 8px 0 rgba(0,0,0,0.19);
   background-color: #446ce3;
 }
+
+.mat-expansion-panel {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background: lightgoldenrodyellow;
+  padding: 2% 0 2% .5%;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+
 a,
 a:visited,
 a:hover {
