--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -8,7 +8,24 @@
   </div>
   <div  class="results" *ngIf="groups">
     <div class="result" *ngFor="let group of groups">
-      {{group.name}}
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          {{group.code}} &nbsp; &nbsp; {{group.name}}
+        </mat-expansion-panel-header>
+        <ng-template matExpansionPanelContent>
+          <ul>
+            <li>
+              {{group.synthesis}}
+            </li>
+            <li *ngIf="group.tasks">
+              {{group.tasks}}
+            </li>
+            <li>
+              <a target="_blank" [routerLink]="['../zawody/', group.code]"> Kliknij tutaj, aby zobaczyć listę dostepnych zawodów (w nowej karcie) </a>
+            </li>
+          </ul>
+        </ng-template>
+      </mat-expansion-panel>
     </div>
   </div>
   <div  class="results" *ngIf="!groups">
