--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -7,7 +7,7 @@
     </form>
   </div>
   <div  class="results" *ngIf="groups">
-    <div class="result" *ngFor="let group of groups">
+    <div class="result" *ngFor="let group of paginatorData">
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           {{group.code}} &nbsp; &nbsp; {{group.name}}
@@ -27,6 +27,11 @@
         </ng-template>
       </mat-expansion-panel>
     </div>
+    <mat-paginator [length]="groups.length"
+                   [pageSize]="pageSize"
+                   [pageSizeOptions]="pageSizeOptions"
+                   (page)="pageEvent = paginateData($event)">
+    </mat-paginator>
   </div>
   <div  class="results" *ngIf="!groups">
     Oczekiwanie...
