--- a/src/app/components/quiz-details/quizDetails.component.css
+++ b/src/app/components/quiz-details/quizDetails.component.css
@@ -1,3 +1,8 @@
+:host {
+  width: 100%;
+  height: 100%;
+}
+
 .content {
   display: flex;
   min-width: 80%;
@@ -74,10 +79,10 @@
 }
 
 .answerCheckbox label span {
-  text-align:center;
+  text-align: center;
   box-sizing: content-box;
-  padding:3px 0;
-  display:block;
+  padding: 3px 0;
+  display: block;
 }
 
 .answerCheckbox label input {
@@ -91,8 +96,7 @@
   background: radial-gradient(circle, rgba(255,255,0,0.65) 0%, rgba(254,255,0,0) 100%);
 }
 
-#nextQuestion {
-  float: right;
+.navQuestions {
   clip-path: inset(0 round 2em);
   background-color: cornflowerblue;
   border: none;
@@ -100,8 +104,20 @@
   font-weight: bolder;
   text-decoration: none;
   margin: 1%;
-  padding: 1%;
+  padding: 1% 2%;
   cursor: pointer;
+}
+
+#next {
+  float: right;
+}
+
+#previous {
+  float: left;
+}
+
+#previous[disabled] {
+  background-color: gray;
 }
 
 #nextQuestion:hover {
