--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,75 +1,41 @@
-<div class="col-md-12">
-  <div class="card card-container">
-    <img
-      id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-      class="profile-img-card"
-    />
-    <form
-      *ngIf="!isLoggedIn"
-      name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
-      novalidate
-    >
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          [(ngModel)]="form.username"
-          required
-          #username="ngModel"
-        />
-        <div
-          class="alert alert-danger"
-          role="alert"
-          *ngIf="username.errors && f.submitted"
-        >
-          Username is required!
-        </div>
+<div class="content">
+  <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+    <h2>
+      Logowanie
+    </h2>
+    <div class="form-group">
+      <label for="username">Nazwa użytkownika</label>
+      <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required #username="ngModel"/>
+      <div class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">
+        Nazwa użytkownika wymagana!
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          [(ngModel)]="form.password"
-          required
-          minlength="6"
-          #password="ngModel"
-        />
-        <div
-          class="alert alert-danger"
-          role="alert"
-          *ngIf="password.errors && f.submitted"
-        >
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">
-            Password must be at least 6 characters
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary btn-block">
-          Login
-        </button>
-      </div>
-      <div class="form-group">
-        <div
-          class="alert alert-danger"
-          role="alert"
-          *ngIf="f.submitted && isLoginFailed"
-        >
-          Login failed: {{ errorMessage }}
-        </div>
-      </div>
-    </form>
-
-    <div class="alert alert-success" *ngIf="isLoggedIn">
-      Logged in as {{ roles }}.
     </div>
+    <div class="form-group">
+      <label for="password">Hasło</label>
+      <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6" #password="ngModel"/>
+      <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
+        <div *ngIf="password.errors.required">
+          Hasło jest wymagane
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary btn-block">
+        Zaloguj się
+      </button>
+      <br />
+      <a routerLink="/register">
+        Nie masz konta? Zarejestruj się!
+      </a>
+    </div>
+
+    <div class="form-group">
+      <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed" >
+        Błędne dane logowania!
+      </div>
+    </div>
+  </form>
+  <div class="alert alert-success" *ngIf="isLoggedIn">
+    Pomyślnie zalogowano!
   </div>
 </div>
