Weryfiklacja hasła przy rejestracji, wyświetlanie historii quizów

--- a/src/app/components/board-user/board-user.component.html
+++ b/src/app/components/board-user/board-user.component.html
@@ -8,7 +8,7 @@
   <div class="result" *ngFor = "let history of userHistory">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
-        Quiz z dnia nieznanego
+        Quiz z dnia {{history.date |  date:'dd.MM.YYYY HH:mm'}}, o godzinie {{history.date |  date:'HH:mm'}}
       </mat-expansion-panel-header>
       <ng-template matExpansionPanelContent>
         <input type="button" (click)="showResults(history)" [routerLink]="'../quiz/' + history.uuid" value='Zobacz wyniki' />
