--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,11 +1,32 @@
-<div class="content" *ngIf="currentUser; else loggedOut">
-  <h3>
-    Profil <strong>{{ currentUser.username }}</strong>
+<div class="content" *ngIf="user; else loggedOut">
+    <div class="alert alert-danger" role="alert" *ngIf="error" >
+      {{errMess}}
+    </div>
+  <div class="alert alert-success" *ngIf="success">
+    {{messege}}
+  </div>
+  <h3 id="name">
+    {{ user.username }}
   </h3>
-  <p>
-    <strong>Email:</strong>
-    {{ currentUser.email }}
-  </p>
+  <strong> Email: {{ user.email }} </strong>
+  <div id="forms">
+    <strong id="label-email"> Zmień adres e-mail</strong>
+    <label id="email-label"> Nowy e-mail </label>
+    <input id="new-email" type="text" placeholder="Nowy adres e-mail" #input (blur)="newEmailEvent(input.value);" />
+    <label id="pass-label"> Potwierdź hasło </label>
+    <input id="pass" type="password" placeholder="Hasło" #input2 (blur)="currentPassEvent(input2.value)"/>
+    <input id="accept-email" type="button" value="Wyślij" (click)="changeEmail()" />
+    <strong id="label-pass"> Zmiana hasła </strong>
+    <label id="old-pass-label"> Obecne hasło </label>
+    <input id="old-pass" type="password"  placeholder="Hasło" #input3 (blur)="currentPassEvent(input3.value)"/>
+    <label id="new-pass-label"> Nowe hasło </label>
+    <input id="new-pass" type="password" placeholder="Nowe hasło" #input4 (blur)="newPassEvent(input4.value)" />
+    <input id="accept-pass" type="button" value="Wyślij" (click)="changePass()"/>
+    <strong id="delete-acc"> Usuwanie konta </strong>
+    <label id="pass-label-delete"> Potwierdź hasło </label>
+    <input id="pass-delete" type="password" placeholder="Hasło" #input5 (blur)="currentPassEvent(input5.value)"/>
+    <input id="accept-delete" type="button" value="Usuń konto" (click)="deleteAccount()"  />
+  </div>
 </div>
 
 <ng-template #loggedOut>
