--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -43,9 +43,18 @@
       </div>
     </div>
     <div class="form-group">
+      <label for="password">Potwierdź hasło</label>
+      <input type="password" class="form-control" name="password2" [(ngModel)]="form.password2" required #password2="ngModel"/>
+      <div class="alert-danger" *ngIf="password2.errors && f.submitted">
+        <div *ngIf="password2.errors.required">Potwierdzenie hasła wymagane</div>
+      </div>
+      <div class="alert-danger" *ngIf="notequal">
+          Hasła nie są takie same
+      </div>
+    </div>
+    <div class="form-group">
       <button class="btn btn-primary btn-block">Zarejestruj konto</button>
     </div>
-
     <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
       {{ message }}
     </div>
