Saving quiz for guests

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -38,4 +38,7 @@
   <div class="alert alert-success" *ngIf="isLoggedIn">
     Pomyślnie zalogowano!
   </div>
+  <div class="alert alert-success" *ngIf="responseSaving">
+    {{responseSaving}}
+  </div>
 </div>
