--- a/src/app/components/quiz-details/quizDetails.component.html
+++ b/src/app/components/quiz-details/quizDetails.component.html
@@ -32,7 +32,7 @@
     </div>
     <div class="alert alert-danger" *ngIf="!savingHistorySuccesfull">
       Zapisanie quizu nie powiodło się. <br/>
-      {{savingResponse}}
+      Zaloguj się lub załóż konto. Ten quiz zostanie na nim zapisany automatycznie.
     </div>
     <p> Twoje grupy elementarne: </p>
     <div class="result" *ngFor = "let result of paginatorData">
