Mniejsze poprawki, wygasanie sesji użytkownika, przekierowania /zaloguj/re, animacja ładowania zawartości

--- a/src/app/components/quiz-details/quizDetails.component.css
+++ b/src/app/components/quiz-details/quizDetails.component.css
@@ -3,6 +3,15 @@
   height: 100%;
 }
 
+ngx-loading {
+  position: absolute;
+  height: 50%;
+}
+
+ngx-loading backdrop {
+
+}
+
 .content {
   display: flex;
   min-width: 80%;
