--- a/src/app/components/quiz-details/quizDetails.component.html
+++ b/src/app/components/quiz-details/quizDetails.component.html
@@ -1,3 +1,6 @@
+<div class="content" *ngIf="waiting">
+  <ngx-loading [show]="waiting"></ngx-loading>
+</div>
 <div class="content" *ngIf="quiz">
   <div class="results" *ngIf="resultsReady == 0">
     <p> Nie znaleziono żadnych dopasowanych grup elementarnych. Możesz rozważyć zwiększenie kwalifikacji. </p>
@@ -30,9 +33,9 @@
       Zapisanie quizu powiodło się! <br/>
       {{savingResponse}}
     </div>
-    <div class="alert alert-danger" *ngIf="!savingHistorySuccesfull">
-      Zapisanie quizu nie powiodło się. <br/>
-      Zaloguj się lub załóż konto. Ten quiz zostanie na nim zapisany automatycznie.
+    <div class="alert alert-danger" *ngIf="!savingHistorySuccesfull && !UUID">
+      Quiz nie został zapisany. <br/>
+      Zaloguj się lub zarejestuj, aby zapisać ten quiz automatycznie.
     </div>
     <p> Twoje grupy elementarne: </p>
     <div class="result" *ngFor = "let result of paginatorData">
