--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,12 +17,12 @@
   <a  *ngIf="isLoggedIn" class="search" routerLink="/historia">
     <h5>Zapisane quizy</h5>
   </a>
-  <a href="/register" class="register" *ngIf="!isLoggedIn" routerLink="register">Zarejestruj się</a>
-  <a href="/login" class="login" routerLink="login" *ngIf="!isLoggedIn">Zaloguj się</a>
+  <a href="/zarejestruj" class="register" *ngIf="!isLoggedIn" routerLink="zarejestruj">Zarejestruj się</a>
+  <a href="/zaloguj" class="login" routerLink="zaloguj" *ngIf="!isLoggedIn">Zaloguj się</a>
 
   <ul class="navbar-nav ml-auto" id="accountNav" *ngIf="isLoggedIn">
     <li class="nav-item">
-      <a href="/profile" class="nav-link" id="profile" routerLink="profile">{{ username }}</a>
+      <a href="/profile" class="nav-link" id="profile" routerLink="profile">{{ username.split(' ')[0]}}</a>
     </li>
     <li class="nav-item">
       <a href class="nav-link" id="logout" (click)="logout()">Wyloguj się</a>
