--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,12 @@
 <div class="content">
+  <div class="alert alert-danger" role="alert" *ngIf="message" >
+    {{message}}
+  </div>
+  <br/>
   <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+    <div class="alert alert-danger" role="alert" *ngIf="responseSaving" >
+      Błędne dane logowania!
+    </div>
     <h2>
       Logowanie
     </h2>
@@ -12,7 +19,7 @@
     </div>
     <div class="form-group">
       <label for="password">Hasło</label>
-      <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6" #password="ngModel"/>
+      <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required #password="ngModel"/>
       <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
         <div *ngIf="password.errors.required">
           Hasło jest wymagane
@@ -24,7 +31,7 @@
         Zaloguj się
       </button>
       <br />
-      <a routerLink="/register">
+      <a routerLink="/zarejestruj">
         Nie masz konta? Zarejestruj się!
       </a>
     </div>
